@@ -1,3 +1,8 @@
+2007-02-12 Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
+	
+	* Make TnyCamelSendQueue subclassable - add accessors
+	  for setting the TnyCamelTransportAccount, and _flush
+
 2007-02-10  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* Various bugfixes for the IDLE feature
